# zero-point

./: .gitignore  CMakeLists.txt  README.md  main.cpp  triangle.cpp
planning/: Zero Point - project sketch.md  work distribution.md
